--- a/client/index.html
+++ b/client/index.html
@@ -10,7 +10,7 @@
 
   
     <div id="root"></div>
-    <script type="module" src='./src/App2.jsx'></script>
+    <script type="module" src='./src/main.jsx'></script>
   </body>
 </html>
  
